Fix intro on mobile

--- a/src/components/home/Hero/index.module.css
+++ b/src/components/home/Hero/index.module.css
@@ -19,7 +19,7 @@
   margin-bottom: 56px;
 }
 
-.textParagraph:not(:last-child) {
+.paragraph:not(:last-child) {
   margin-bottom: 20px;
 }
 
